unpackaged/main/default/objects/Unit_Legacy_History__c/Unit_Legacy_History__c.object-meta.xml
<CustomObject>
    <description>Object to store imported hardware history data (Unit).</description>
    <label>Unit Legacy History</label>
    <nameField>
        <displayFormat>ULH-{0000000}</displayFormat>
        <label>Unit Legacy History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units Legacy History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>