unpackaged/main/default/objects/Unit_Legacy_History__c/fields/Associated_Country__c.field-meta.xml
<CustomField>
    <fullName>Associated_Country__c</fullName>
    <label>Associated Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>