unpackaged/main/default/objects/Unit_Legacy_History__c/fields/Associated_Location__c.field-meta.xml
<CustomField>
    <fullName>Associated_Location__c</fullName>
    <label>Associated Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>