unpackaged/main/default/objects/Unit_Legacy_History__c/fields/CI_Type_Terminal__c.field-meta.xml
<CustomField>
    <fullName>CI_Type_Terminal__c</fullName>
    <label>CI Type Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>