unpackaged/main/default/objects/Unit_Legacy_History__c/fields/Device_Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Device_Article_Number__c</fullName>
    <label>Device Article Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>