unpackaged/main/default/objects/Unit_Legacy_History__c/fields/EMV_Online_Keys__c.field-meta.xml
<CustomField>
    <fullName>EMV_Online_Keys__c</fullName>
    <label>EMV Online Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>