unpackaged/main/default/objects/Unit_Legacy_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>55</length>
    <type>Text</type>
</CustomField>