unpackaged/main/default/objects/Unit_Legacy_History__c/fields/HDW_Version__c.field-meta.xml
<CustomField>
    <fullName>HDW_Version__c</fullName>
    <label>HDW Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>