unpackaged/main/default/objects/Unit_Legacy_History__c/fields/PCI_PTS_Approval_number__c.field-meta.xml
<CustomField>
    <fullName>PCI_PTS_Approval_number__c</fullName>
    <label>PCI PTS Approval number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>