unpackaged/main/default/objects/Unit_Legacy_History__c/fields/PCI_PTS_POI_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>PCI_PTS_POI_Product_Type__c</fullName>
    <label>PCI PTS POI Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>