unpackaged/main/default/objects/Unit_Legacy_History__c/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <formula>HYPERLINK(&quot;https://fintrax--uat.lightning.force.com/lightning/r/&quot;+Unit__r.POS_Solution__r.POS_18ID__c +&quot;/view&quot;, Unit__r.POS_Solution__r.Name  ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Solution</label>
    <type>Text</type>
</CustomField>