unpackaged/main/default/objects/Unit_Legacy_History__c/fields/RMA_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Date__c</fullName>
    <label>RMA Date</label>
    <type>Date</type>
</CustomField>