unpackaged/main/default/objects/Unit_Legacy_History__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <label>RMA Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>