unpackaged/main/default/objects/Unit_Legacy_History__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <formula>Unit__r.Serial_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial No</label>
    <type>Text</type>
</CustomField>