unpackaged/main/default/objects/Unit_Legacy_History__c/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <label>Software Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>