unpackaged/main/default/objects/Unit_Legacy_History__c/fields/X3C_Instance_TID__c.field-meta.xml
<CustomField>
    <fullName>X3C_Instance_TID__c</fullName>
    <description>Label: 3C Instance TID &gt; Instance No (28/01/2022)</description>
    <label>Instance No</label>
    <length>16</length>
    <type>Text</type>
</CustomField>